--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 img {
+  display: inline;
+  float: left;
   width: 100px;
+}
+
+body {
+  background-color: Ivory;
+  color: DarkBlue;
+  font-family: Open Sans;
+  margin: 10px 50px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: Oswald;
 }
