--- a/style.css
+++ b/style.css
@@ -14,3 +14,14 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: Oswald;
 }
+
+.browser {
+  float: left;
+  width: 300px;
+}
+
+
+nav > span {
+  float: left;
+  width: 25%;
+}
