--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ img {
 }
 
 body {
-  background-color: Ivory;
-  color: DarkBlue;
+  background-color: black;
+  color: white;
   font-family: Open Sans;
   margin: 10px 50px;
 }
@@ -15,13 +15,12 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Oswald;
 }
 
-.browser {
-  float: left;
-  width: 300px;
-}
-
-
 nav > span {
   float: left;
   width: 25%;
+}
+
+.browser-link > img {
+  float: left;
+  width: 300px;
 }
