--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body {
+  padding-top: 50px;  /* Move body of page below navbar. */
+}
+
+.page-content {
+  padding: 10px;
+}
+
 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 100px;
 }
+
