--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   background-color: Ivory;
   color: DarkBlue;
   font-family: Open Sans;
-  margin: 10px 50px;
+  margin: 50px;
 }
 
 h1, h2, h3, h4, h5, h6 {
